--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+.centrifier {
+  width: 1000px;
+  margin: 0 auto;
+}
