--- a/src/app/routes/details-page/details-page.component.scss
+++ b/src/app/routes/details-page/details-page.component.scss
@@ -13,6 +13,9 @@
   .task-details--text {
     display: block;
     margin-top: 10px;
+    font-size: 18px;
+    width: 100%;
+    max-width: 100%;
   }
   .task-details--name {
     font-weight: bold;
