--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -7,9 +7,10 @@
   margin: 0;
 
   .task {
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     display: flex;
     max-width: 100%;
+    position: relative;
     flex-direction: column;
 
     &--description {
@@ -59,6 +60,26 @@
     }
     &:nth-child(2n) {
       background-color: #e1e5e5;
+    }
+  }
+  .delete-marker {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
+    height: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    font-style: normal;
+    width: 10px;
+    font-weight: bold;
+    color: #d2d2d2;
+    cursor: pointer;
+    font-family: cursive;
+    &:hover {
+      color: darken(#d2d2d2, 10%);
     }
   }
 }
