--- a/src/app/routes/details-page/details-page.component.scss
+++ b/src/app/routes/details-page/details-page.component.scss
@@ -4,25 +4,21 @@
   background-color: darken(#fff, 5%);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
 
+  .navigation {
+    margin-bottom: 20px;
+  }
+
+  .task-details--item {
+    margin-top: 20px;
+  }
+
   .nav-back {
     display: inline-block;
     color: #3c63be;
     font-style: italic;
     text-decoration: none;
-    border: 1px solid #3c63be;
-    border-radius: 10px;
-    padding: 5px 10px;
-    margin: 20px 0 0 0;
     cursor: pointer;
     transition: all .1s ease;
-    &:active {
-      animation: flash 1s linear;
-    }
-    &:hover {
-      text-decoration: none;
-      background-color: #3c63be;
-      color: #fff;
-    }
   }
 
   .task-details--title {
@@ -33,8 +29,10 @@
   }
   .task-details--text {
     display: block;
-    margin-top: 10px;
     font-size: 14px;
+    padding: 10px;
+    border: 1px solid #d2d2d2;
+    border-radius: 5px;
   }
   span.task-details--text {
     cursor: pointer;
@@ -45,8 +43,10 @@
   textarea {
     min-width: 100%;
     max-width: 100%;
+    min-height: 100px;
     font-size: 14px;
-    border: none;
+    box-sizing: border-box;
+    border: 1px solid #fbfbf7;
     outline: none;
   }
   .ok-button {
@@ -57,7 +57,7 @@
     font-weight: bold;
     cursor: pointer;
     margin: 5px 0;
-    align-self: center;
+    align-self: flex-end;
 
     &:hover {
       background-color: #59cc6d;
@@ -67,9 +67,28 @@
     display: flex;
     flex-direction: column;
   }
+  .task-label {
+    display: inline-block;
+    font-size: 13px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    background-color: #d2d2d2;
+    padding: 0 5px;
+  }
+  &--controls {
+    margin-top: 30px;
 
-  span {
-    padding: 10px;
-    border-bottom: 1px solid #d2d2d2;
+    button {
+      margin: 5px;
+      border: none;
+      font-size: 14px;
+      padding: 5px 10px;
+      cursor: pointer;
+      transition: all .2s ease-in-out;
+      &:hover {
+        box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px rgba(0, 0, 0, .1);
+      }
+    }
   }
 }
