--- a/src/app/routes/details-page/details-page.component.scss
+++ b/src/app/routes/details-page/details-page.component.scss
@@ -50,17 +50,16 @@
     outline: none;
   }
   .ok-button {
-    border: 1px solid #59cc6d;
-    border-radius: 10px;
+    margin: 5px;
+    border: none;
+    font-size: 14px;
     padding: 5px 10px;
-    background: transparent;
-    font-weight: bold;
     cursor: pointer;
-    margin: 5px 0;
+    transition: all .2s ease-in-out;
     align-self: flex-end;
-
     &:hover {
       background-color: #59cc6d;
+      box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px rgba(0, 0, 0, .1);
     }
   }
   .editor {
