--- a/src/app/routes/details-page/details-page.component.scss
+++ b/src/app/routes/details-page/details-page.component.scss
@@ -59,12 +59,16 @@
     align-self: flex-end;
     &:hover {
       background-color: #59cc6d;
-      box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px rgba(0, 0, 0, .1);
+      box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px 1px rgba(0, 0, 0, .1);
     }
   }
   .editor {
     display: flex;
     flex-direction: column;
+  }
+  .details--placeholder {
+    color: #d2d2d2;
+    font-style: italic;
   }
   .task-label {
     display: inline-block;
@@ -77,6 +81,8 @@
   }
   &--controls {
     margin-top: 30px;
+    display: flex;
+    justify-content: flex-end;
 
     button {
       margin: 5px;
@@ -86,7 +92,7 @@
       cursor: pointer;
       transition: all .2s ease-in-out;
       &:hover {
-        box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px rgba(0, 0, 0, .1);
+        box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px 1px rgba(0, 0, 0, .1);
       }
     }
   }
