--- a/src/app/routes/list-page/list-page.component.scss
+++ b/src/app/routes/list-page/list-page.component.scss
@@ -1,3 +1,5 @@
+@import "src/styles.scss";
+
 .list-wrapper {
   display: flex;
   justify-content: flex-start;
@@ -7,9 +9,10 @@
   width: 50%;
   padding: 20px;
   border-radius: 3px;
-  background-color: darken(#fff, 5%);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
+  @include glass;
 }
+
 .item-details {
   margin-left: 20px;
   width: 50%;
