--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,47 @@
   width: 1000px;
   margin: 0 auto;
 }
+
+html {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  position: relative;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    //background: url("/assets/images/space.jpg") center repeat-y;
+    //animation: scrollBg 2000s linear infinite;
+  }
+}
+
+body {
+  position: relative;
+  z-index: 1;
+}
+
+
+@mixin glass {
+  background-color: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(3px);
+}
+
+@keyframes scrollBg {
+  0% {
+    background-position: 0 0;
+    filter: hue-rotate(0deg);
+  } 50% {
+    background-position: 0 1000%;
+    filter: hue-rotate(360deg);
+  } 100% {
+     background-position: 0 0;
+     filter: hue-rotate(0deg);
+  }
+}
