--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
 <div class="navbar">
   <ul>
     <li><a [routerLink]="['/welcome']">Home</a></li>
-    <li><a [routerLink]="['/list']">Task List</a></li>
-    <li><a [routerLink]="['add']">Add task</a></li>
-    <li><a [routerLink]="['game']">Green guy torment</a></li>
-    <li><a [routerLink]="['rain']">Golden rain</a></li>
+    <li *ngIf="checkLoggedIn()"><a [routerLink]="['/list']">Task List</a></li>
+    <li *ngIf="checkLoggedIn()"><a [routerLink]="['add']">Add task</a></li>
+    <li><a [routerLink]="['game']" id="game">Green guy torment</a></li>
+    <li><a [routerLink]="['rain']" id="rain">Golden rain</a></li>
+
+  </ul>
+  <ul>
     <li *ngIf="!checkLoggedIn()"><a [routerLink]="['login']">Login</a></li>
     <li *ngIf="checkLoggedIn()" (click)="logOut()"><a>Logout</a></li>
   </ul>
