step_4: authorization simplified + minor tweaks

--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -15,7 +15,7 @@
 
       <div class="task--description-controls">
         <a [routerLink]="['/list', task.id]" class="task--done-marker">details</a>
-        <a (click)="remove(i)" class="delete-marker">X</a>
+        <a (click)="remove(i)" class="delete-marker"></a>
       </div>
     </div>
   </li>
