--- a/src/app/routes/login-page/login-page.component.html
+++ b/src/app/routes/login-page/login-page.component.html
@@ -1,7 +1,14 @@
-<div id="login-form" *ngIf="!checkLoggedIn()">
-  <h2>Log in</h2>
-  <input type="text" [(ngModel)]="login" placeholder="Login">
-  <input type="text" [(ngModel)]="password" placeholder="Password">
-  <button (click)="auth(login, password)">Login</button>
-</div>
-<h1 *ngIf="checkLoggedIn()">Welcome, {{this.login}}</h1>
+
+<form [formGroup]="loginForm" (ngSubmit)="logIn()" *ngIf="!this.loginService.checkToken()">
+  <label>
+    Login:
+    <input type="text" formControlName="login">
+  </label>
+  <label>
+    Password:
+    <input type="password" formControlName="password">
+  </label>
+
+  <button type="submit" [disabled]="!loginForm.valid">Submit</button>
+</form>
+
