step_5: visual adjustments + minor tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
+<div id="headerBar">
+  <div class="centrifier">
+    <div class="header">
+      <a routerLink="welcome">
+        <img src="/assets/images/logo.png" width="150" />
+      </a>
+      <app-navbar></app-navbar>
+    </div>
+  </div>
+</div>
+
 <div class="centrifier">
-  <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
