--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <div class="navbar">
   <ul>
     <li><a [routerLink]="['/welcome']">Home</a></li>
-    <li *ngIf="this.loginService.checkToken()"><a [routerLink]="['/list']">Task List</a></li>
-    <li *ngIf="this.loginService.checkToken()"><a [routerLink]="['add']">Add task</a></li>
+    <li *ngIf="checkToken()"><a [routerLink]="['/list']">Task List</a></li>
+    <li *ngIf="checkToken()"><a [routerLink]="['add']">Add task</a></li>
     <li><a [routerLink]="['game']" id="game">Green guy torment</a></li>
     <li><a [routerLink]="['rain']" id="rain">Golden rain</a></li>
 
   </ul>
-  <ul>
-    <li *ngIf="!this.loginService.checkToken()"><a [routerLink]="['login']">Login</a></li>
-    <li *ngIf="this.loginService.checkToken()" (click)="logOut()"><a>Logout</a></li>
+  <ul class="logIn">
+    <li *ngIf="!checkToken()"><a [routerLink]="['login']">Login</a></li>
+    <li *ngIf="checkToken()" (click)="logOut()"><a>Logout</a></li>
   </ul>
 </div>
