--- a/src/app/routes/welcome-page/welcome-page.component.html
+++ b/src/app/routes/welcome-page/welcome-page.component.html
@@ -1,2 +1,10 @@
-<h1>Another trivial task list app</h1>
-<span>Log in to use task list feature</span>
+<div class="centrifier">
+  <div class="page-wrapper">
+    <h1>CÜTÜLU APP</h1>
+    <span>Log in to use task list feature</span>
+    <div class="button-container">
+      <button class="login-button" routerLink="/login"> LOGIN </button>
+    </div>
+  </div>
+</div>
+
