--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 * {
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
 }
+
 .centrifier {
-  width: 1000px;
+  min-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -22,8 +26,6 @@ html {
     z-index: 0;
     width: 100%;
     height: 100%;
-    //background: url("/assets/images/space.jpg") center repeat-y;
-    //animation: scrollBg 2000s linear infinite;
   }
 }
 
