--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,7 @@
 <div class="centrifier">
   <router-outlet></router-outlet>
 </div>
+
+<div class="footer">
+    <span class="footer-text">powered by CancerCell Corporation</span>
+</div>
