--- a/src/app/routes/welcome-page/welcome-page.component.html
+++ b/src/app/routes/welcome-page/welcome-page.component.html
@@ -1,9 +1,20 @@
 <div class="centrifier">
   <div class="page-wrapper">
-    <h1>CÜTÜLU APP</h1>
-    <span>Log in to use task list feature</span>
-    <div class="button-container">
-      <button class="login-button" routerLink="/login"> LOGIN </button>
+    <h1>WELCOME TO <span class="bright-text">CÜTÜLU APP</span></h1>
+
+    <div *ngIf="!checkToken()">
+      <span>Log in to use task list feature...</span>
+      <span>or enjoy your stay here!</span>
+      <div class="button-container">
+        <button class="cool-button" routerLink="/login"> LOGIN </button>
+      </div>
+    </div>
+
+    <div *ngIf="checkToken()">
+      <span>You can now use the Task List feature</span>
+      <div class="button-container">
+        <button class="cool-button" routerLink="/list"> Task List </button>
+      </div>
     </div>
   </div>
 </div>
