--- a/src/app/routes/welcome-page/welcome-page.component.scss
+++ b/src/app/routes/welcome-page/welcome-page.component.scss
@@ -5,8 +5,11 @@ span {
 }
 
 .page-wrapper {
-  margin-top: 20px;
+  margin: 20px auto;
   padding: 20px;
+  width: 500px;
+  background: #f5f5f5;
+  border: 1px solid #e2e2e2;
 }
 
 .button-container {
@@ -14,7 +17,7 @@ span {
   margin: 20px;
 }
 
-.login-button {
+.cool-button {
   padding: 10px 15px;
   background: linear-gradient(-45deg, #770ccb, #e211d9);
   border-radius: 5px;
@@ -25,5 +28,23 @@ span {
   transition: all .5s ease-in-out;
   &:hover {
     background: linear-gradient(-45deg, #5b0cac, #b411ab);
+  }
+}
+
+.bright-text {
+  display: inline;
+  background: -webkit-linear-gradient(-45deg, #5b0cac, #b411ab);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: color-spin 10s linear infinite;
+}
+
+@keyframes color-spin {
+  0% {
+    filter: hue-rotate(0deg);
+  } 50% {
+    filter: hue-rotate(180deg);
+  } 100% {
+    filter: hue-rotate(360deg);
   }
 }
