--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 }
 
 .centrifier {
-  min-width: 1000px;
+  width: 1000px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -14,24 +14,13 @@
 html {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   position: relative;
-
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-  }
 }
 
 body {
   position: relative;
   z-index: 1;
+  min-height: 100vh;
 }
 
 
