step_5: visual adjustments + minor tweaks

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 #headerBar {
-  background-color: #815bb3;
+  background: linear-gradient(-68deg, #550098, #00b164, #b931b5);
   padding: 10px 0;
-  box-shadow: 0 2px 4px rgba(0,0,0,.25);
+  box-shadow: 0 2px 4px rgb(77,9,149);
+  animation: color-spin 10s linear infinite;
 
   img {
     margin-left: 10px;
@@ -26,4 +27,14 @@
     padding: 0 20px;
     text-align: right;
   }
+}
+
+@keyframes color-spin {
+  0% {
+    filter: hue-rotate(0deg);
+  } 50% {
+      filter: hue-rotate(180deg);
+    } 100% {
+        filter: hue-rotate(360deg);
+      }
 }
