--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,3 +1,3 @@
 <span>Quick add task</span>
 <input type="name" [(ngModel)]="name">
-<button (click)="quickAddTask()">OK</button>
+<button (click)="quickAddTask()" class="cool-button">ADD</button>
