--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="task--description-controls">
-        <a [routerLink]="['/list', task.id]" class="task--done-marker">details</a>
+        <a [routerLink]="['/list', task.id]" class="cool-button">details</a>
         <a (click)="remove(i)" class="delete-marker"></a>
       </div>
     </div>
