--- a/src/app/routes/create-page/create-page.component.html
+++ b/src/app/routes/create-page/create-page.component.html
@@ -4,7 +4,7 @@
   <input [(ngModel)]="name" id="name">
   <label for="description">Task description</label>
   <textarea [(ngModel)]="desc" id="description"></textarea>
-  <button (click)="validateAndAdd()">Submit</button>
+  <button class="cool-button" (click)="validateAndAdd()">Submit</button>
 </div>
 
 
