--- a/src/app/components/add-task/add-task.component.scss
+++ b/src/app/components/add-task/add-task.component.scss
@@ -1,6 +1,8 @@
 input {
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 18px;
+  width: 300px;
+  padding: 5px;
 }
 span {
   display: block;
@@ -9,4 +11,20 @@ span {
 }
 button {
   font-size: 16px;
+}
+
+.cool-button {
+  padding: 8px 15px;
+  background: linear-gradient(-45deg, #770ccb, #e211d9);
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none;
+  transition: all .5s ease-in-out;
+  &:hover:not(:disabled) {
+    background: linear-gradient(-45deg, #5b0cac, #b411ab);
+  }
+  &:disabled {
+    filter: grayscale(1) opacity(0.5);
+  }
 }
