--- a/src/app/routes/details-page/details-page.component.scss
+++ b/src/app/routes/details-page/details-page.component.scss
@@ -3,6 +3,26 @@
   border-radius: 3px;
   background-color: darken(#fff, 5%);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
+  position: relative;
+  margin: 50px;
+
+  .delete-marker {
+    position: absolute;
+    opacity: .2;
+    top: 5px;
+    right: 5px;
+    padding: 10px;
+    height: 5px;
+    width: 5px;
+    border: none;
+    cursor: pointer;
+    background: url('/assets/images/x.svg') center no-repeat;
+    transition: opacity 150ms ease-in-out;
+
+    &:hover {
+      opacity: .4;
+    }
+  }
 
   .navigation {
     margin-bottom: 20px;
@@ -95,5 +115,19 @@
         box-shadow: 0 0 6px rgba(0, 0, 0, .2), 0 0 2px 1px rgba(0, 0, 0, .1);
       }
     }
+  }
+}
+
+.cool-button {
+  padding: 10px 15px;
+  background: linear-gradient(-45deg, #770ccb, #e211d9);
+  border-radius: 5px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+  &:hover {
+    background: linear-gradient(-45deg, #5b0cac, #b411ab);
   }
 }
