--- a/src/app/routes/list-page/list-page.component.scss
+++ b/src/app/routes/list-page/list-page.component.scss
@@ -5,8 +5,9 @@
   justify-content: flex-start;
 }
 .list-container {
-  margin-top: 50px;
-  width: 50%;
+  margin: 50px 20px;
+  width: 500px;
+  max-width: 100%;
   padding: 20px;
   border-radius: 3px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
