--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -14,8 +14,8 @@
       </div>
 
       <div class="task--description-controls">
-        <a [routerLink]="['/list', task.id]" class="cool-button">details</a>
-        <a (click)="remove(i)" class="delete-marker"></a>
+        <a [routerLink]="['/list', task.id]" class="simple-button">details</a>
+        <a (click)="deleteTask(task.id)" class="delete-marker"></a>
       </div>
     </div>
   </li>
