--- a/src/app/routes/create-page/create-page.component.html
+++ b/src/app/routes/create-page/create-page.component.html
@@ -1,11 +1,12 @@
-<div class="task-details">
-  <h2 class="task-details--title">new task</h2>
-  <label for="name">Task name</label>
-  <input [(ngModel)]="name" id="name">
-  <label for="description">Task description</label>
-  <textarea [(ngModel)]="desc" id="description"></textarea>
-  <button class="cool-button" (click)="validateAndAdd()">Submit</button>
+<div class="centrifier">
+  <div class="task-details">
+    <h2 class="task-details--title">new task</h2>
+    <label for="name">Task name</label>
+    <input [(ngModel)]="name" id="name">
+    <label for="description">Task description</label>
+    <textarea [(ngModel)]="desc" id="description"></textarea>
+    <button class="cool-button" (click)="validateAndAdd()">Submit</button>
+  </div>
 </div>
-
 
 
