--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,12 @@
 #headerBar {
   background: linear-gradient(-68deg, #550098, #00b164, #b931b5);
-  padding: 10px 0;
-  box-shadow: 0 2px 4px rgb(77,9,149);
+  padding: 0;
   animation: color-spin 10s linear infinite;
-
-  img {
-    margin-left: 10px;
-  }
-  .header {
-    display: flex;
-    align-items: center;
-  }
+}
+#navBar {
+  background-color: #317dbe;
+  padding: 20px 0 20px 0;
+  box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
 
 .footer {
@@ -29,12 +25,4 @@
   }
 }
 
-@keyframes color-spin {
-  0% {
-    filter: hue-rotate(0deg);
-  } 50% {
-      filter: hue-rotate(180deg);
-    } 100% {
-        filter: hue-rotate(360deg);
-      }
-}
+
