--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,27 +1,35 @@
-.navbar {
+.navBar {
   display: inline-flex;
   justify-content: space-between;
   padding: 0 20px;
 }
 
-.navbar ul {
+.navBar ul,
+.logIn {
   padding-left: 0;
   display: inline-flex;
 
   li {
     list-style: none;
-    font-size: 16px;
     margin-left: 16px;
     cursor: pointer;
 
     a {
       color: #ffffff;
-      font-size: 18px;
+      font-size: 14px;
+      position: relative;
       text-decoration: none;
       transition: all .2s ease-in-out;
 
-      &:hover {
-        color: #ffee7b;
+      &:hover:after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        border-radius: 7px 7px 0 0;
+        background-color: #fff;
+        bottom: -21px;
       }
     }
 
@@ -32,5 +40,6 @@
 }
 
 .logIn {
-  margin-left: 50px;
+  position: absolute;
+  right: 0;
 }
