--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -7,7 +7,7 @@
   margin: 0;
 
   .task {
-    padding: 30px 10px 10px 10px;
+    padding: 10px;
     display: flex;
     max-width: 100%;
     position: relative;
@@ -33,31 +33,12 @@
     }
     &--text {
        text-decoration: none;
+      font-weight: bold;
        color: #000;
-       font-size: 18px;
        transition: all .3s ease;
        &:hover {
          color: lighten(#000, 20%);
        }
-    }
-    &--done-marker {
-      color: #3c63be;
-      font-style: italic;
-      text-decoration: none;
-      border: 1px solid #3c63be;
-      border-radius: 10px;
-      padding: 5px 10px;
-      margin: 5px;
-      cursor: pointer;
-      transition: all .1s ease;
-      &:active {
-        animation: flash 1s linear;
-      }
-      &:hover {
-        text-decoration: none;
-        background-color: #3c63be;
-        color: #fff;
-      }
     }
     &:nth-child(2n) {
       background-color: #e1e5e5;
@@ -67,7 +48,7 @@
     position: absolute;
     opacity: .2;
     top: 5px;
-    right: 5px;
+    right: 10px;
     padding: 5px;
     height: 5px;
     width: 5px;
@@ -78,33 +59,5 @@
     &:hover {
       opacity: .4;
     }
-  }
-}
-
-.cool-button {
-  padding: 10px 15px;
-  background: linear-gradient(-45deg, #770ccb, #e211d9);
-  border-radius: 5px;
-  color: #fff;
-  font-size: 12px;
-  cursor: pointer;
-  text-decoration: none;
-  transition: all .5s ease-in-out;
-  &:hover:not(:disabled) {
-    background: linear-gradient(-45deg, #5b0cac, #b411ab);
-  }
-  &:disabled {
-    filter: grayscale(1) opacity(0.5);
-  }
-}
-
-
-@keyframes flash {
-  from {
-    text-shadow: 0 0 1px white;
-  } to {
-    text-shadow: 0 0 5px white;
-  } to {
-    text-shadow: 0 0 1px white;
   }
 }
