--- a/src/app/routes/create-page/create-page.component.scss
+++ b/src/app/routes/create-page/create-page.component.scss
@@ -6,7 +6,7 @@
   background-color: darken(#fff, 5%);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
   width: fit-content;
-  margin: 50px;
+  margin: 50px auto;
 
   .task-details--title {
     margin: 0 0 10px 0;
@@ -35,18 +35,4 @@
     max-width: 500px;
   }
 
-}
-
-.cool-button {
-  padding: 10px 15px;
-  background: linear-gradient(-45deg, #770ccb, #e211d9);
-  border-radius: 5px;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all .5s ease-in-out;
-  &:hover {
-    background: linear-gradient(-45deg, #5b0cac, #b411ab);
-  }
 }
