--- a/src/app/routes/details-page/details-page.component.html
+++ b/src/app/routes/details-page/details-page.component.html
@@ -5,26 +5,27 @@
 
   <div class="task-details--item">
     <span class="task-label">Task name</span>
-    <div class="editor" *ngIf="editNameEnabled === true">
-      <textarea class="task-details--text" [(ngModel)]="task.name" autofocus>{{task.name}}</textarea>
+    <div class="editor" *ngIf="nameEditable === true">
+      <textarea class="task-details--text" [(ngModel)]="task.name" autofocus>{{task?.name}}</textarea>
       <button (click)="saveName()" class="cool-button">OK</button>
     </div>
-    <span class="task-details--text task-details--name" (click)="editName()" *ngIf="editNameEnabled === false">{{task.name}}</span>
+    <span class="task-details--text task-details--name" (click)="editName()"
+          *ngIf="nameEditable === false">{{task?.name}}</span>
   </div>
 
   <div class="task-details--item">
     <span class="task-label">Task details</span>
-    <div class="editor" *ngIf="this.editDetailsEnabled === true">
-      <textarea class="task-details--text" [(ngModel)]="task.details" autofocus>{{task.details}}</textarea>
+    <div class="editor" *ngIf="this.detailsEditable === true">
+      <textarea class="task-details--text" [(ngModel)]="task.details" autofocus>{{task?.details}}</textarea>
       <button (click)="saveDetails()" class="cool-button">OK</button>
     </div>
-    <span class="task-details--text" (click)="editDetails()" *ngIf="this.editDetailsEnabled === false" >
-    <span *ngIf="task.details.length === 0" class="details--placeholder"> Click here to add the details</span>
-      {{task.details}}
+    <span class="task-details--text" (click)="editDetails()" *ngIf="this.detailsEditable === false" >
+    <span *ngIf="task?.details?.length === 0" class="details--placeholder"> Click here to add the details</span>
+      {{task?.details}}
     </span>
   </div>
 
-  <button class="delete-marker" (click)="removeTask()"></button>
+  <button class="delete-marker" (click)="removeTask(id)"></button>
 
 </div>
 
