--- a/src/app/routes/list-page/list-page.component.scss
+++ b/src/app/routes/list-page/list-page.component.scss
@@ -9,9 +9,9 @@
   width: 500px;
   max-width: 100%;
   padding: 20px;
+  background: #f2f2f2;
   border-radius: 3px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
-  @include glass;
 }
 
 .item-details {
