--- a/src/app/routes/welcome-page/welcome-page.component.scss
+++ b/src/app/routes/welcome-page/welcome-page.component.scss
@@ -2,6 +2,7 @@ h1,
 span {
   display: block;
   text-align: center;
+  font-weight: normal;
 }
 
 .page-wrapper {
@@ -17,22 +18,9 @@ span {
   margin: 20px;
 }
 
-.cool-button {
-  padding: 10px 15px;
-  background: linear-gradient(-45deg, #770ccb, #e211d9);
-  border-radius: 5px;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all .5s ease-in-out;
-  &:hover {
-    background: linear-gradient(-45deg, #5b0cac, #b411ab);
-  }
-}
-
 .bright-text {
   display: inline;
+  font-weight: bold;
   background: -webkit-linear-gradient(-45deg, #5b0cac, #b411ab);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
