--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 * {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -9,6 +10,7 @@
   width: 1000px;
   max-width: 100%;
   margin: 0 auto;
+  position: relative;
 }
 
 html {
@@ -21,8 +23,44 @@ body {
   position: relative;
   z-index: 1;
   min-height: 100vh;
+  background-color: #f5f5f5;
 }
 
+#Logo {
+  margin-left: 20px;
+}
+
+.cool-button {
+  padding: 10px 15px;
+  background: linear-gradient(-45deg, #327dbe, #124a7b);
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 12px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: all .1s ease-in-out;
+  &:hover:not(:disabled) {
+    filter: hue-rotate(20deg);
+  }
+  &:disabled {
+    filter: grayscale(1) opacity(0.5);
+  }
+}
+
+.simple-button {
+  border: 1px solid #3c63be;
+  color: #3c63be;
+  font-size: 13px;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 10px;
+  transition: all .1s ease-in-out;
+  &:hover {
+    background-color: #3c63be;
+    color: #fff;
+  }
+}
 
 @mixin glass {
   background-color: rgba(255, 255, 255, 0);
@@ -39,5 +77,25 @@ body {
   } 100% {
      background-position: 0 0;
      filter: hue-rotate(0deg);
+  }
+}
+
+@keyframes color-spin {
+  0% {
+    filter: hue-rotate(0deg);
+  } 50% {
+    filter: hue-rotate(180deg);
+  } 100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+@keyframes flash {
+  0% {
+    filter: sepia(0);
+  } 50% {
+    filter: sepia(1);
+  } 100% {
+    filter: sepia(0);
   }
 }
