step_6: login forms validation added

--- a/src/app/routes/welcome-page/welcome-page.component.html
+++ b/src/app/routes/welcome-page/welcome-page.component.html
@@ -6,7 +6,9 @@
       <span>Log in to use task list feature...</span>
       <span>or enjoy your stay here!</span>
       <div class="button-container">
-        <button class="cool-button" routerLink="/login"> LOGIN </button>
+        <button class="cool-button" routerLink="/signin"> Sign in </button>
+        or
+        <button class="cool-button" routerLink="/register"> Register </button>
       </div>
     </div>
 
