--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,9 @@
 
   <ul class="logIn">
     <li *ngIf="afAuth.user | async as user; else login" (click)="logOut()"><a>Logout</a></li>
-    <ng-template #login><li><a [routerLink]="['login']">Login</a></li></ng-template>
+    <ng-template #login>
+      <li><a [routerLink]="['register']">Register</a></li>
+      <li><a [routerLink]="['signin']">Sign in</a></li>
+    </ng-template>
   </ul>
 </div>
