--- a/src/app/routes/sign-in-page/sign-in-page.component.scss
+++ b/src/app/routes/sign-in-page/sign-in-page.component.scss
@@ -33,3 +33,15 @@
     margin: 20px 0 0 0;
   }
 }
+
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.welcome-header {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
