step_7: speech api added

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,9 @@
   background: linear-gradient(-68deg, #550098, #00b164, #b931b5);
   padding: 0;
   animation: color-spin 10s linear infinite;
+  box-shadow: 0 5px 20px 0px red;
 }
+
 #navBar {
   background-color: #317dbe;
   padding: 20px 0 20px 0;
