--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <div class="centrifier">
   <div class="navBar">
     <ul>
-      <li><a [routerLink]="['/welcome']">Home</a></li>
-      <li *ngIf="checkToken()"><a [routerLink]="['/list']">Task List</a></li>
-      <li *ngIf="checkToken()"><a [routerLink]="['add']">Add task</a></li>
-      <li><a [routerLink]="['game']" id="game">Green guy torment</a></li>
-      <li><a [routerLink]="['rain']" id="rain">Golden rain</a></li>
+      <li><a [routerLink]="['/welcome']" (click)="cutulu()">Home</a></li>
+      <li *ngIf="checkToken()"><a [routerLink]="['/list']" (click)="cutulu()">Task List</a></li>
+      <li *ngIf="checkToken()"><a [routerLink]="['add']" (click)="cutulu()">Add task</a></li>
+      <li><a [routerLink]="['game']" id="game" (click)="cutulu()">Green guy torment</a></li>
+      <li><a [routerLink]="['rain']" id="rain" (click)="cutulu()">Golden rain</a></li>
     </ul>
   </div>
 
   <ul class="logIn">
     <li *ngIf="afAuth.user | async as user; else login" (click)="logOut()"><a>Logout</a></li>
     <ng-template #login>
-      <li><a [routerLink]="['register']">Register</a></li>
-      <li><a [routerLink]="['signin']">Sign in</a></li>
+      <li><a [routerLink]="['register']" (click)="cutulu()">Register</a></li>
+      <li><a [routerLink]="['signin']" (click)="cutulu()">Sign in</a></li>
     </ng-template>
   </ul>
 </div>
