step_7: raw email update functionality added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<div id="headerBar">
-  <a routerLink="welcome">
-    <img src="/assets/images/logo.png" width="100" id="Logo" />
-  </a>
-</div>
+<div id="headerBar"></div>
 
 <div id="navBar">
     <app-navbar></app-navbar>
