--- a/src/app/routes/game-page/game-page.component.html
+++ b/src/app/routes/game-page/game-page.component.html
@@ -1,1 +1,4 @@
-<iframe src="/assets/game/1.html" style="border: none; display: block;" width="440" height="440" tabindex="0"></iframe>
+<div class="page-wrapper">
+  <iframe src="/assets/game/1.html" style="border: none; display: block;" width="440" height="440" tabindex="0"></iframe>
+</div>
+
