--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,3 +1,3 @@
 <span>Quick add task</span>
-<input type="name" [(ngModel)]="name">
-<button (click)="quickAddTask()" class="cool-button">ADD</button>
+<input type="name" [(ngModel)]="name" class="input-rounded">
+<button (click)="quickAddTask()" class="btn-rounded">+</button>
