--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,5 @@
+@import "./src/styles";
+
 .navBar {
   display: inline-flex;
   justify-content: space-between;
@@ -7,6 +9,7 @@
 .navBar ul,
 .logIn {
   padding-left: 0;
+  padding-top: 5px;
   display: inline-flex;
 
   li {
@@ -14,23 +17,15 @@
     cursor: pointer;
 
     a {
-      color: #ffffff;
+      color: $color-type-primary;
       font-size: 14px;
       margin-left: 16px;
       position: relative;
       text-decoration: none;
+      padding-bottom: 5px;
       transition: all .2s ease-in-out;
-
-      &:hover:after {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 4px;
-        border-radius: 7px 7px 0 0;
-        background-color: #fff;
-        bottom: -21px;
-        left: 0;
+      &:hover {
+        border-bottom: 4px solid $color-type-primary;
       }
     }
 
