--- a/src/app/routes/create-page/create-page.component.scss
+++ b/src/app/routes/create-page/create-page.component.scss
@@ -6,7 +6,7 @@
   background-color: darken(#fff, 5%);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
   width: fit-content;
-  margin: 50px auto;
+  margin: 50px;
 
   .task-details--title {
     margin: 0 0 10px 0;
