--- a/src/app/routes/rain-page/rain-page.component.html
+++ b/src/app/routes/rain-page/rain-page.component.html
@@ -1,1 +1,3 @@
-<iframe src="/assets/particles/index.html" style="border: none; display: block;" width="440" height="440"></iframe>
+<div class="page-wrapper">
+  <iframe src="/assets/particles/index.html" style="border: none; display: block;" width="440" height="440"></iframe>
+</div>
