--- a/src/app/routes/sign-in-page/sign-in-page.component.html
+++ b/src/app/routes/sign-in-page/sign-in-page.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="signIn()">
       <span *ngIf="errorMessage" class="error-message">{{errorMessage}}</span>
       <label>
-        Login:
+        Email:
         <input type="email" formControlName="email">
       </label>
       <label>
