--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+$font-header: 'Roboto Condensed', sans-serif;
+$font-type: 'Open Sans', sans-serif;
+$gradient-main: linear-gradient(-45deg, #2d2c2e, #404146);
+$gradient-secondary: linear-gradient(-45deg, #aca8e0, #525589);
+$color-type-primary: #38393d;
+$border-color-primary: #e2e2e2;
 * {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-type;
   margin: 0;
   padding: 0;
 }
@@ -10,12 +15,6 @@
   width: 1000px;
   max-width: 100%;
   margin: 0 auto;
-  position: relative;
-}
-
-html {
-  margin: 0;
-  padding: 0;
   position: relative;
 }
 
@@ -32,16 +31,19 @@ body {
 
 .cool-button {
   padding: 10px 15px;
-  background: linear-gradient(-45deg, #327dbe, #124a7b);
-  border-radius: 5px;
+  background: $gradient-main;
   border: none;
   color: #fff;
-  font-size: 12px;
+  font-size: 17px;
+  letter-spacing: 2px;
+  font-family: $font-header;
   cursor: pointer;
   text-decoration: none;
-  transition: all .1s ease-in-out;
+  width: max-content;
+  text-transform: uppercase;
+  transition: all .3s ease-in-out;
   &:hover:not(:disabled) {
-    filter: hue-rotate(20deg);
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.7);
   }
   &:disabled {
     filter: grayscale(1) opacity(0.5);
@@ -51,18 +53,16 @@ body {
 .bright-text {
   display: inline;
   font-weight: bold;
-  background: -webkit-linear-gradient(-45deg, #5b0cac, #b411ab);
+  background: $gradient-secondary;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: color-spin 10s linear infinite;
 }
 
 .page-wrapper {
   margin: 50px auto;
   padding: 20px;
   width: 100%;
-  background: #f5f5f5;
-  border: 1px solid #e2e2e2;
+  min-height: calc(100vh - 190px);
 }
 
 .simple-button {
@@ -77,6 +77,12 @@ body {
     background-color: #3c63be;
     color: #fff;
   }
+}
+
+.c-c-v {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .error-message {
